Fix ktLint issues